[package]
name = "not_empty"
version = "0.1.0" # update for html_root_url in src/lib.rs and README.md

edition = "2021"

[features]
default = ["std"]

alloc = ["serde?/alloc"]
serde = ["dep:serde"]
std = ["serde?/std"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
version-sync = "0.9.4"
