[package]
name = "not_empty"
version = "0.1.1" # update for html_root_url in src/lib.rs and README.md

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["data-structures", "no-std", "rust-patterns"]
description = "Slices and vectors that are statically guaranteed to be not empty."
documentation = "https://docs.rs/not_empty"
edition = "2021"
keywords = ["nonempty", "nonzero", "no_std", "slice", "vector"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/seancroach/not_empty"

[features]
default = ["std"]

alloc = ["serde?/alloc"]
serde = ["dep:serde"]
std = ["serde?/std"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
version-sync = "0.9.4"

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "doc_cfg"]
